prevent preload img jumping 3

--- a/boutique/static/boutique/css/custom.scss
+++ b/boutique/static/boutique/css/custom.scss
@@ -163,10 +163,8 @@ footer {
 }
 
 // images
-.img-placeholder {
-  background-image: url('../img/img_placeholder.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
+.loading {
+  background: transparent url('../img/img-placeholder.gif') center no-repeat;
 }
 
 .dim-img-70 {
